1627: Fix calendar alignment and platform bike_type issue

--- a/src/components/RideTo/AvailabilityCalendar/CalendarDayCell.scss
+++ b/src/components/RideTo/AvailabilityCalendar/CalendarDayCell.scss
@@ -9,7 +9,7 @@
   margin-bottom: -1px;
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: center;
   padding: 5px;
   &:hover {
     background: var(--light-grey-color);
